src/Test/Fixtures/Bad/TypeQualifier/missingEqualsBeforeQallocInAffineBinding.lf
let affine q: qubit qalloc();
